--- a/web/index.html
+++ b/web/index.html
@@ -30,9 +30,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
@@ -97,5 +95,25 @@
       loadMainDartJs();
     }
   </script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app-check.js"></script>
+
+  <script>
+    // Firebase configuration
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyB_05Mmk0IYfmbL3E9pzoFLRJBi0Nh1lkQ",
+      authDomain: "tqwcovidreg.firebaseapp.com",
+      databaseURL: "https://tqwcovidreg-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "tqwcovidreg",
+      storageBucket: "tqwcovidreg.appspot.com",
+      messagingSenderId: "1068687754897",
+      appId: "1:1068687754897:web:6a5e3b8f90b85911e3a130",
+      measurementId: "G-ZJM9PLJ4TL"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
