--- a/web/index.html
+++ b/web/index.html
@@ -96,8 +96,10 @@
     }
   </script>
 
+  <script>self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;</script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app-check.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 
   <script>
     // Firebase configuration
